--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -150,6 +150,16 @@ layout: default
                                 </a>
                             </li>
                             {% endif %}
+                            {% if site.jianshu_username %}
+                            <li>
+                                <a target="_blank" href="http://weibo.com/{{ site.jianshu_username }}">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                            {% endif %}
                             <!-- {% if site.facebook_username %}
                             <li>
                                 <a target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
