--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -155,7 +155,7 @@ layout: default
                                 <a target="_blank" href="http://jianshu.com/{{ site.jianshu_username }}">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
+                                        <i class="fa fa-jianshu fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
